# C

./: CMakeLists.txt  firstclass.txt
day01/: C_git_data.txt  first.c
day02/: 0114-1.c  0114-2.c  0114.c  day01.txt
day03/: 0117-1.c  0117-2.c  0117-3.c  0117-4.c  0117-5.c  0117-6.c  0117-7.c  0117-8.c  0117.c  day03.txt
day04/: 0119-1.c  0119-2.c  0119-3.c  0119-4.c  0119-5.c  0119-6.c  0119-7.c  0119.c  day04.txt
day05/: 0124-1.c  0124-2.c  0124-3.c  0124-4.c  0124-5.c  0124-6.c  0124-7.c  0124-8.c  0124.c
day06/: 0126-1.c  0126-2.c  0126-3.c  0126-4.c  0126-5.c  0126.c
day07/: 0128-1.c  0128-2.c  0128-3.c  0128-4.c  0128-5.c  0128-6.c  0128-7.c  0128-8.c  0128.c
day08/: 0207-1.c  0207-2.c  0207-3.c  0207-4.c  0207.c
day09/: 0209-1.c  0209-2.c  0209-3.c  0209-4.c  0209-5.c  0209-6.c  0209.c  myHeader.h  myHeader1.h
day11/: 0214.c
day12/: 0216.c
day13/: 0223.c
day14/: 0302.c
