cmake_minimum_required(VERSION 3.21)
project(1900_C_CUH C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

add_executable(first day01/first.c)
add_executable(0114 day02/0114.c)
add_executable(0114-1 day02/0114-1.c)
add_executable(0114-2 day02/0114-2.c)
add_executable(0117 day03/0117.c)
add_executable(0117-1 day03/0117-1.c)
add_executable(0117-2 day03/0117-2.c)
add_executable(0117-3 day03/0117-3.c)
add_executable(0117-4 day03/0117-4.c)
add_executable(0117-5 day03/0117-5.c)
add_executable(0117-6 day03/0117-6.c)
add_executable(0117-7 day03/0117-7.c)
add_executable(0117-8 day03/0117-8.c)