cmake_minimum_required(VERSION 3.21)
project(1900_C_CUH C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_FLAGS "-fexec-charset=CP949")

add_executable(first day01/first.c)
add_executable(0114 day02/0114.c)
add_executable(0114-1 day02/0114-1.c)
add_executable(0114-2 day02/0114-2.c)
add_executable(0117 day03/0117.c)
add_executable(0117-1 day03/0117-1.c)
add_executable(0117-2 day03/0117-2.c)
add_executable(0117-3 day03/0117-3.c)
add_executable(0117-4 day03/0117-4.c)
add_executable(0117-5 day03/0117-5.c)
add_executable(0117-6 day03/0117-6.c)
add_executable(0117-7 day03/0117-7.c)
add_executable(0117-8 day03/0117-8.c)
add_executable(0119 day04/0119.c)
add_executable(0119-1 day04/0119-1.c)
add_executable(0119-2 day04/0119-2.c)
add_executable(0119-3 day04/0119-3.c)
add_executable(0119-4 day04/0119-4.c)
add_executable(0119-5 day04/0119-5.c)
add_executable(0119-6 day04/0119-6.c)
add_executable(0119-7 day04/0119-7.c)
add_executable(0124 day05/0124.c)
add_executable(0124-1 day05/0124-1.c)
add_executable(0124-2 day05/0124-2.c)
add_executable(0124-3 day05/0124-3.c)
add_executable(0124-4 day05/0124-4.c)
add_executable(0124-5 day05/0124-5.c)
add_executable(0124-6 day05/0124-6.c)
add_executable(0124-7 day05/0124-7.c)
add_executable(0124-8 day05/0124-8.c)
add_executable(0126 day06/0126.c)
add_executable(0126-1 day06/0126-1.c)
add_executable(0126-2 day06/0126-2.c)
add_executable(0126-3 day06/0126-3.c)
add_executable(0126-4 day06/0126-4.c)
add_executable(0126-5 day06/0126-5.c)
add_executable(0128 day07/0128.c)
add_executable(0128-1 day07/0128-1.c)
add_executable(0128-2 day07/0128-2.c)
add_executable(0128-3 day07/0128-3.c)
add_executable(0128-4 day07/0128-4.c)
add_executable(0128-5 day07/0128-5.c)
add_executable(0128-6 day07/0128-6.c)
add_executable(0128-7 day07/0128-7.c)
add_executable(0128-8 day07/0128-8.c)
add_executable(0207 day08/0207.c)
add_executable(0207-1 day08/0207-1.c)
add_executable(0207-2 day08/0207-2.c)
add_executable(0207-3 day08/0207-3.c)
add_executable(0207-4 day08/0207-4.c)
add_executable(0209 day09/0209.c)
add_executable(0209-1 day09/0209-1.c)
add_executable(0209-2 day09/0209-2.c)
add_executable(0209-3 day09/0209-3.c)
add_executable(0209-4 day09/0209-4.c)
add_executable(0209-5 day09/0209-5.c)
add_executable(0209-6 day09/0209-6.c)
add_executable(0214 day11/0214.c)
add_executable(0216 day12/0216.c)